[package]
name = "example-alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies.rlink-connector-kafka]
version = "0.6"
path = "../../rlink-connectors/connector-kafka"

[dependencies.rlink-example-utils]
version = "0.6"
path = "../example-utils"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
uuid ={version="0.8",features=["v4"]}

parquet= "4.0"
webhdfs="0.3"

dashmap = "5.4.0"
lazy_static = "1.4.0"
# kafka
rdkafka = { version = "0.25", features = ["cmake-build"] }
get-size = "0.1.1"
[build-dependencies]
serbuffer-gen = "1.3"