[package]
name = "example-doris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies.rlink-connector-doris]
version = "0.6"
path = "../../rlink-connectors/connector-doris"

[dependencies.rlink-example-utils]
version = "0.6"
path = "../example-utils"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
anyhow = "1.0"
rand = "0.7"
chrono = "0.4"

[build-dependencies]
serbuffer-gen = "1.3"