[package]
name = "rlink-connector-doris"
version = "0.6.2"
authors = ["rancho <rancho_zhanggj@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "doris"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rlink_connector_doris"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies]
log = "0.4"
anyhow = "1.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

#http
reqwest = { version = "0.11", features = ["blocking", "json"] }

rand = "0.7"
base64 = "0.13.0"
futures = "0.3.21"